using System.Collections;
using System.Collections.Generic;

internal class AnimationStrings {
  internal static string isMoving = "isMoving";
  internal static string isGrounded = "isGrounded";
  internal static string isOnWall = "isOnWall";
  internal static string isOnCeiling = "isOnCeiling";
  internal static string jump = "jump";
}